# masterclass-18-11-24

./: Readme.md
Documentos/: Cikume_Software_masterclass_docker_y_kubernetes.pptx  Kubernetes masterclass.pptx
Ejemplos_presentados/docker_file_multy_stage/: Dockerfile.dev  compose.yaml  log_build  package-lock.json  package.json
Ejemplos_presentados/docker_file_multy_stage/public/: index.html
Ejemplos_presentados/docker_file_multy_stage/src/: App.css  App.js
Ejemplos_presentados/ejemplo_completo/: .env  compose.yaml
Ejemplos_presentados/ejemplo_completo/frontend/: Dockerfile  log_build  main.py  pyproject.toml
Ejemplos_presentados/ejemplo_completo/frontend/config/: config.py
Ejemplos_presentados/ejemplo_completo/frontend/managment_data/: crud.py
Ejemplos_presentados/ejemplo_completo/migraciones/: initial_migration.sql
Ejemplos_presentados/kubernetes_examples/: app.yaml
Ejemplos_presentados/kubernetes_examples/Docker_kubernetes_master_class/Docker_registry/: compose.yaml  openssl-san.cnf
Ejemplos_presentados/kubernetes_examples/Docker_kubernetes_master_class/Docker_registry/certs/: registry.crt  registry.key
Ejemplos_presentados/kubernetes_examples/Docker_kubernetes_master_class/kubernetes/basic_manifests/: configmap.yaml  deployment.yaml  ingress.yaml  secrets.yaml  service.yaml
Ejemplos_presentados/kubernetes_examples/Docker_kubernetes_master_class/presentacion/: Cikume_Software_masterclass_docker_y_kubernetes.pptx  Docker_kubernetes_masterclas.odp  Docker_kubernetes_masterclas.pptx
(+18 files in other folders)
